Update Text to Speech.ipynb

--- a/Text to Speech.ipynb
+++ b/Text to Speech.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "from gtts import gTTS\n",
     "import os\n",
-    "myText=\"Merhaba Bana bir soru sor.Bende Cevaplayim\" \n",
+    "myText=\"Hi I am computer engineer \" \n",
     "output= gTTS(text=myText,lang='tr',slow=False)\n",
     "output.save(\"outputtr.mp3\")"
    ]
